Change names and form file structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>color-palette</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/main.css">
   </head>
 
   <body>
-    <script src="./begin.js"></script>
+    <script src="./js/begin.js"></script>
 
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
