Re set up grid layout in css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
 
   <body>
-    <script src="./js/begin.js"></script>
-
+    <div class="app-container">
+      <div class="header-container"></div>
+      <div class="main-container"></div>
+      <div class="footer-container"></div>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
