Add dark/light mode button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
               <label for="six-swatches">6</label>
             </div>
           </div>
+
+          <div class="dark-light-mode">
+            <p>Dark Mode</p>
+          </div>
       </div>
 
       <div class="main-container"></div>
