Complete dark mode with some bugs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style/main.css">
   </head>
 
-  <body>
+  <body class="light">
     <div class="app-container">
 
       <div class="header-container">
@@ -27,12 +27,12 @@
             </div>
           </div>
 
-          <div class="dark-light-mode">
+          <div class="mode-button light">
             <p>Dark Mode</p>
           </div>
       </div>
 
-      <div class="main-container"></div>
+      <div class="main-container light"></div>
 
       <div class="footer-container"></div>
 
